# toggle

./: .contributors.jsonl  .contributors.yml  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTORS.md  Cargo.toml  Justfile  Makefile  PROJECTS.md  README.md  RELEASE.md  commitlint.config.mjs  commitlint.dependabot.config.mjs  deny.toml  flake.nix  lefthook.yml  package-lock.json  package.json  pyproject.toml  release-please-config.json
.github/: actionlint.yaml
.github/workflows/: audit.yml  ci.yml  commitlint.yml  nixpkgs-update.yml  release-please.yml  release.yml  update-contributors.yml
benches/: toggle_bench.rs
crates/toggle-cli/: Cargo.toml
crates/toggle-cli/benches/: cli_bench.rs
crates/toggle-cli/src/: main.rs
crates/toggle-cli/tests/: integration.rs
crates/toggle-cli/tests/fixtures/: sample.js  sample.rb  simple_python.py  variants.py
crates/toggle-cli/tests/fixtures/fixtures/: sample.rs
crates/toggle-lib/: Cargo.toml
crates/toggle-lib/benches/: toggle_bench.rs
crates/toggle-lib/src/: core.rs  io.rs  lib.rs
crates/toggle-lib/tests/unit/: config_tests.rs  core_tests.rs  io_tests.rs  walk_tests.rs
crates/togl-cli/: Cargo.toml
crates/togl-cli/src/: cli.rs  main.rs
crates/togl-cli/tests/: filter.rs  integration.rs  subcommands.rs
crates/togl-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml  togl.pc.in
crates/togl-ffi/include/: togl.h
crates/togl-ffi/src/: error.rs  introspect.rs  lib.rs  mem.rs  transforms.rs
crates/togl-ffi/tests/: c_smoke.rs  smoke.c
crates/togl-lib/: Cargo.toml
crates/togl-lib/benches/: toggle_bench.rs
crates/togl-lib/src/: core.rs  io.rs
crates/togl-lib/tests/unit/: config_tests.rs  core_tests.rs  io_tests.rs  walk_tests.rs
docs/superpowers/plans/: 2026-04-16-p01-section-variants-core.md  2026-04-16-p02-pair-validation-flag.md  2026-04-16-p03-variant-aware-scan.md  2026-04-16-p04-check-validation.md  2026-05-29-p05-insert-section.md  2026-05-29-togl-ffi-c-library.md
docs/superpowers/specs/: 2026-05-29-marker-insert-strip-list-filters-design.md  2026-05-29-release-please-commitlint-design.md  2026-05-29-togl-c-abi-library-design.md
nix/: libtogl.nix  package.nix  togl.nix
npm/: README.md
npm/platform/darwin-arm64/: package.json
npm/platform/darwin-x64/: package.json
npm/platform/linux-x64/: package.json
npm/platform/win32-x64/: package.json
npm/togl-cli/: package.json
npm/togl-cli/lib/: run.js
prds/: phase-0-prd-review.md  phase-0-prd.md
src/: cli.rs  config.rs  core.rs  exit_codes.rs  io.rs  journal.rs  lib.rs  main.rs  platform.rs  walk.rs
tests/: integration.rs  test_simple_python.sh  unit.rs
tests/fixtures/: sample.sh
tests/unit/: config_tests.rs  core_tests.rs  io_tests.rs  walk_tests.rs
