[workspace]
members = ["crates/togl-lib", "crates/togl-cli", "crates/togl-ffi"]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2021"
authors = ["Steve Morin"]
license = "MIT"
repository = "https://github.com/smorin/toggle"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
tempfile = "3.8"
