[package]
name = "togl"
description = "A CLI tool for toggling code comments across multiple languages"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "toggle"
path = "src/main.rs"

[[bin]]
name = "togl"
path = "src/bin/togl.rs"

# The `version` is required for crates.io publishing and is kept in sync with
# the workspace version by the release workflow before each publish.
[dependencies]
togl-lib = { path = "../togl-lib", version = "0.5.0" }
anyhow.workspace = true
serde.workspace = true
serde_json = "1"
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
signal-hook = "0.3"

[dev-dependencies]
togl-lib = { path = "../togl-lib", version = "0.5.0" }
assert_cmd = "2.0"
predicates = "3.0"
tempfile.workspace = true
serde_json = "1"
criterion = "0.5"

[[bench]]
name = "cli_bench"
harness = false

[features]
default = []
extended-logging = ["togl-lib/extended-logging"]
