[package]
name = "togl-ffi"
description = "C ABI (libtogl) for togl — toggling code comments across languages"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "togl"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
togl-lib = { path = "../togl-lib" }
serde.workspace = true
serde_json = "1"

[build-dependencies]
cbindgen = "0.27"
