[package]
name = "togl-ffi"
description = "C ABI (libtogl) for togl — toggling code comments across languages"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
# Not published to crates.io: this crate produces the libtogl C library
# (static/cdylib) for C consumers, not a Rust crate others depend on.
publish = false

[lib]
name = "togl"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
togl-lib = { path = "../togl-lib" }
serde.workspace = true
serde_json = "1"

[build-dependencies]
cbindgen = "0.27"
