[package]
name = "togl-lib"
description = "Core library for toggling code comments across multiple languages"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "togl_lib"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
tempfile.workspace = true
walkdir = "2.4"
similar = "2"
toml = "0.8"
encoding_rs = "0.8"
serde_json = "1"
sha2 = "0.10"
fd-lock = "4"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[package.metadata.cargo-semver-checks.lints]
constructible_struct_adds_field = "allow"

[dev-dependencies]
criterion = "0.5"

[features]
default = []
extended-logging = []

[[bench]]
name = "toggle_bench"
harness = false
